backends/foundation_macros/tests/trybuild/fail/wasm_entrypoint_wrong_type.rs
use foundation_macros::wasm_entrypoint;

#[wasm_entrypoint(name = 42, desc = "wrong type")]
pub fn wrong_type() {}

fn main() {}
